# FliesSimulation

./: CMakeLists.txt  README.md
src/: Arena3D.cpp  Arena3D.h  Cuboid.h  DrawArena.cpp  Egg.cpp  Egg.h  FliesConfig.cpp  FliesConfig.h  FliesConfigGenerator.cpp  Fly3D.cpp  Fly3D.h  Food.cpp  Simulation.cpp  Simulation.h  Utility.cpp  Utility.h  Wall.cpp  Wall.h  main.cpp
